crates/sotf-plugins/tests/snapshots/render_plan_snapshots__band_split__band_split__desktop_1400.snap
---
source: crates/sotf-plugins/tests/render_plan_snapshots.rs
expression: plan
---
{
  "plugin_type": "band_split",
  "width": 1400.0,
  "design_language": "neutral",
  "corner_radius_md": 8.0,
  "min_touch_target": 32.0,
  "toggle_variant": "capsule",
  "label_position": "below",
  "orientation": "horizontal",
  "knob_size": "md",
  "group_direction": "row",
  "slider_height": 180.0,
  "show_visualizations": true,
  "columns_visible": [
    "main"
  ],
  "columns_collapsed": [],
  "config_controls": [],
  "main_groups": [
    {
      "title": "CROSSOVER",
      "controls": [
        {
          "param_index": 0,
          "param_name": "Frequency",
          "control_type": "knob",
          "unit": "Hz",
          "range": [
            20.0,
            20000.0
          ],
          "read_only": false
        },
        {
          "param_index": 1,
          "param_name": "Type",
          "control_type": "button_set",
          "unit": "",
          "range": [
            0.0,
            1.0
          ],
          "read_only": false
        }
      ]
    }
  ],
  "output_controls": [],
  "tabs": [],
  "viz_slots": [],
  "dynamic_sections": []
}
