crates/sotf-plugins/tests/snapshots/render_plan_snapshots__band_split__band_split__iphone_portrait.snap
---
source: crates/sotf-plugins/tests/render_plan_snapshots.rs
expression: plan
---
{
  "plugin_type": "band_split",
  "width": 390.0,
  "design_language": "neutral",
  "corner_radius_md": 8.0,
  "min_touch_target": 32.0,
  "toggle_variant": "capsule",
  "label_position": "below",
  "orientation": "vertical",
  "knob_size": "xs",
  "group_direction": "column",
  "slider_height": 120.0,
  "show_visualizations": false,
  "columns_visible": [
    "main"
  ],
  "columns_collapsed": [],
  "visible_group_ids": [
    "CROSSOVER"
  ],
  "overflow_group_ids": [],
  "config_controls": [],
  "main_groups": [
    {
      "id": "CROSSOVER",
      "title": "CROSSOVER",
      "controls": [
        {
          "param_index": 0,
          "param_name": "Frequency",
          "control_type": "knob",
          "unit": "Hz",
          "range": [
            20.0,
            20000.0
          ],
          "read_only": false,
          "enabled": true
        },
        {
          "param_index": 1,
          "param_name": "Type",
          "control_type": "button_set",
          "unit": "",
          "range": [
            0.0,
            1.0
          ],
          "read_only": false,
          "enabled": true
        }
      ]
    }
  ],
  "output_controls": [],
  "tabs": [],
  "viz_slots": [],
  "dynamic_sections": []
}
